Added content to tacos.html with Description, ingredients, and steps for taco recipe

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tacos</title>
 </head>
+
 <body>
-    
-<h1>Street Tacos</h1>
+
+    <h1>Street Tacos</h1>
+
+    <img src="../images/tacos.jpg" alt="Street Tacos">
+
+    <h2>A classic Mexican dish that brings you to the heart of Mexico</h2>
+
+    <p>A simple yet delicious dish. Savory, well seasoned, flat steak tacos that fit for any occasion</p>
+
+    <h3>Ingredients</h3>
+
+    <ul>
+        <li>Flank Steak</li>
+        <li>Tortillas</li>
+        <li>White Onions</li>
+        <li>Cilantro</li>
+        <li>Salsa</li>
+        <li>
+            Seasonings / Marinade
+            <ul>
+                <li>Chili Powder</li>
+                <li>Soy Sauce</li>
+                <li>Cumin</li>
+            </ul>
+        </li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Cut flank steak into short 1/2 inch thick pieces</li>
+        <li>Place meat into a zip lock bag along with the Seasonings, Soy Sauce and lime juice</li>
+        <li>Let Marinate for a few hours</li>
+        <li>Once marinated, cook steak in a skillet until meat and thoroughly cooked to your liking</li>
+        <li>Cut up Onions, cilantro, and limes into wedges then set to the side</li>
+        <li>Grab a tortilla and heat it up in a pan to make them warm and soft</li>
+        <li>Assemble tacos with onion, cilantro, squeezed lime and salsa</li>
+    </ol>
+
 
 </body>
+
 </html>
