--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     
 <h1>Odin Recipes</h1>
 
-<a href="recipes/tacos.html">Street Tacos</a>
+<ul>
+    <li><a href="recipes/tacos.html">Street Tacos</a></li>
+    <li><a href="recipes/ramen.html">Ramen</a></li>
+    <li><a href="recipes/chicken-soup.html">Chicken Soup</a></li>
+
+</ul>
+
 
 </body>
 </html>
